--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -23,97 +23,97 @@
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --2.png" alt="null">
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --3.png" alt="null">
       <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1341224">충청남도 당진시 석문면 삼봉리 474-12</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1341224">충청남도 당진시 석문면 삼봉리 474-12</a> 낙찰기일: 5.14</p>
       <img class="nw-100--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --0.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --1.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1333685">전북특별자치도 완주군 화산면 종리 산57</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1333685">전북특별자치도 완주군 화산면 종리 산57</a> 5.12</p>
       <img class="nw-100--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --0.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --1.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 김제시 금산면 선동리 산53 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1390240">전북특별자치도 김제시 금산면 선동리 산53</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1390240">전북특별자치도 김제시 금산면 선동리 산53</a> 5.26</p>
       <img class="nw-100--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --0.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --1.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --2.png" alt="null">
       <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1377739">전북특별자치도 부안군 하서면 장신리 68-1</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1377739">전북특별자치도 부안군 하서면 장신리 68-1</a> 5.26</p>
       <img class="nw-100--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --0.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --1.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --2.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --3.png" alt="null">
       <img class="nw-24--a" src="image/전북특별자치도 부안군 주산면 돈계리 433 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1390318">전북특별자치도 부안군 주산면 돈계리 433</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1390318">전북특별자치도 부안군 주산면 돈계리 433</a> 5.19</p>
       <img class="nw-100--a" src="image/전라남도 구례군 산동면 계천리 산67 --0.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --1.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --2.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --3.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 구례군 산동면 계천리 산67 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1370315">전라남도 구례군 산동면 계천리 산67</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1370315">전라남도 구례군 산동면 계천리 산67</a> 5.19*</p>
       <img class="nw-100--a" src="image/전라남도 순천시 월등면 대평리 491-3 --0.png" alt="null">
       <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --1.png" alt="null">
       <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --2.png" alt="null">
       <img class="nw-32--a" src="image/전라남도 순천시 월등면 대평리 491-3 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1353740">전라남도 순천시 월등면 대평리 491-3</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1353740">전라남도 순천시 월등면 대평리 491-3</a> 6.9*</p>
       <img class="nw-100--a" src="image/전라남도 여수시 화양면 옥적리 산302 --0.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --1.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --2.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --3.png" alt="null">
       <img class="nw-24--a" src="image/전라남도 여수시 화양면 옥적리 산302 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1359372">전라남도 여수시 화양면 옥적리 산302</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1359372">전라남도 여수시 화양면 옥적리 산302</a> 5.19</p>
       <img class="nw-100--a" src="image/경상남도 함안군 군북면 수곡리 289 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 함안군 군북면 수곡리 289 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1365437">경상남도 함안군 군북면 수곡리 289</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1365437">경상남도 함안군 군북면 수곡리 289</a> 낙찰기일: 5.15</p>
       <img class="nw-100--a" src="image/경상남도 의령군 용덕면 가미리 산46 --0.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --1.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --2.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --3.png" alt="null">
       <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1335560">경상남도 의령군 용덕면 가미리 산46</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1335560">경상남도 의령군 용덕면 가미리 산46</a> 낙찰기일: 5.15</p>
       <img class="nw-100--a" src="image/경상남도 의령군 대의면 추산리 315 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 의령군 대의면 추산리 315 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1365434">경상남도 의령군 대의면 추산리 315</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1365434">경상남도 의령군 대의면 추산리 315</a> 낙찰기일: 5.15</p>
       <img class="nw-100--a" src="image/경상남도 창녕군 대합면 도개리 1178 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상남도 창녕군 대합면 도개리 1178 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1375723">경상남도 창녕군 대합면 도개리 1178</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1375723">경상남도 창녕군 대합면 도개리 1178</a> 5.19</p>
       <img class="nw-100--a" src="image/경상북도 성주군 수륜면 수륜리 853 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a> 5.13</p>
       <img class="nw-100--a" src="image/경상북도 포항시 남구 장기면 창지리 산20 --0.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 포항시 남구 장기면 창지리 산20 --1.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 포항시 남구 장기면 창지리 산20 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 포항시 남구 장기면 창지리 산20 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1379205">경상북도 포항시 남구 장기면 창지리 산20</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1379205">경상북도 포항시 남구 장기면 창지리 산20</a> 5.19</p>
       <img class="nw-100--a" src="image/경상북도 의성군 금성면 청로리 산55 --0.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --1.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --2.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --3.png" alt="null">
       <img class="nw-24--a" src="image/경상북도 의성군 금성면 청로리 산55 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1379543">경상북도 의성군 금성면 청로리 산55</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1379543">경상북도 의성군 금성면 청로리 산55</a> 5.14</p>
       <img class="nw-100--a" src="image/충청북도 제천시 금성면 포전리 149 --0.png" alt="null">
       <img class="nw-32--a" src="image/충청북도 제천시 금성면 포전리 149 --1.png" alt="null">
       <img class="nw-32--a" src="image/충청북도 제천시 금성면 포전리 149 --2.png" alt="null">
       <img class="nw-32--a" src="image/충청북도 제천시 금성면 포전리 149 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1377204">충청북도 제천시 금성면 포전리 149</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1377204">충청북도 제천시 금성면 포전리 149</a> 6.9</p>
       <img class="nw-100--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --0.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --1.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --2.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 평창군 대화면 대화리 632 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1364446">강원특별자치도 평창군 대화면 대화리 632</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1364446">강원특별자치도 평창군 대화면 대화리 632</a> 5.27</p>
       <img class="nw-100--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --0.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --1.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --2.png" alt="null">
       <img class="nw-32--a" src="image/강원특별자치도 횡성군 안흥면 성산리 853-2 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1393166">강원특별자치도 횡성군 안흥면 성산리 853-2</a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1393166">강원특별자치도 횡성군 안흥면 성산리 853-2</a> 5.26</p>
       <img class="nw-100--a" src="image/ --0.png" alt="null">
       <img class="nw-32--a" src="image/ --1.png" alt="null">
       <img class="nw-32--a" src="image/ --2.png" alt="null">
