--- a/ko/study/unity/index.html
+++ b/ko/study/unity/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-9284100516320364">
-  <link rel="stylesheet" href="../../../../../Assets/css/style.css">
-  <script src="../../../../../Assets/js/#"></script>
+  <link rel="stylesheet" href="../../../Assets/css/style.css">
+  <script src="../../../Assets/js/#"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9284100516320364" crossorigin="anonymous"></script>
   <title>Unity Errer Report</title>
 </head>
