--- a/ko/document/certificate/vocational-counselor/post-page4/index.html
+++ b/ko/document/certificate/vocational-counselor/post-page4/index.html
@@ -25,7 +25,7 @@
         <ol><ul>이 자료는 필자가 여기저기 모아서 개인적으로 종합 한 내용으로 정확성 및 사실성이 <strong>보장되지 않는</strong> 문서입니다.</ul>
           <ul><em>'신뢰성 있는 공식 문서가 필요 하신분은 다른 문서를 참고 해주세요.'</em></ul>
           <ul>잘못된 부분을 댓글로 받고 싶지만, 아직 구현 할 줄 모릅니다.</ul>
-          <ul>꼭 알려주고 싶다는 내용이 있으면, gpcdeveloper@gmail.com 으로 알려주시면 참고 하겠습니다.</ul>
+          <ul>꼭 알려주고 싶다는 내용이 있으면, uegyun@gmail.com 으로 알려주시면 참고 하겠습니다.</ul>
           <ul>개인적인 공부/복습을 위해 만들어졌기 때문에 언제든 수정·삭제될 수 있습니다.</ul></ol>
         <h1><br>[[ 노동 시장 ]]</h1>
         <h3>직업별 노동조합(Craft Union)</h3>
