--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -22,22 +22,22 @@
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/2.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/4.pngg" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1399343"></a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1399343">경기도 광주시 퇴촌면 관음리 82-32</a></p>
       <img class="nw-100--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/1.png" alt="null">
-      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-21.png" alt="null">
-      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-22.png" alt="null">
-      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-23.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1398286"></a></p>
-      <img class="nw-100--a" src="image/ --1.png" alt="null">
-      <img class="nw-32--a" src="image/ --2.png" alt="null">
-      <img class="nw-32--a" src="image/ --3.png" alt="null">
-      <img class="nw-32--a" src="image/ --4.png" alt="null">
+      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/2.png" alt="null">
+      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
+      <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
+      <img class="nw-100--a" src="image//1.png" alt="null">
+      <img class="nw-32--a" src="image//2.png" alt="null">
+      <img class="nw-32--a" src="image//3.png" alt="null">
+      <img class="nw-32--a" src="image//4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
-      <img class="nw-100--a" src="image/ --1.png" alt="null">
-      <img class="nw-24--a" src="image/ --2.png" alt="null">
-      <img class="nw-24--a" src="image/ --3.png" alt="null">
-      <img class="nw-24--a" src="image/ --4.png" alt="null">
-      <img class="nw-24--a" src="image/ --5.png" alt="null">
+      <img class="nw-100--a" src="image//1.png" alt="null">
+      <img class="nw-24--a" src="image//2.png" alt="null">
+      <img class="nw-24--a" src="image//3.png" alt="null">
+      <img class="nw-24--a" src="image//4.png" alt="null">
+      <img class="nw-24--a" src="image//5.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
       <!--
       <img class="nw-100--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --0.png" alt="null">
