--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -33,6 +33,11 @@
       <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/05-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
+      <img class="nw-100--a" src="image/04-경남/20-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/20-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/20-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/20-고성/경상남도 고성군 상리면 망림리 1002/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1364117">경상남도 고성군 상리면 망림리 1002</a></p>
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
       <img class="nw-32--a" src="image//3.png" alt="null">
