--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -38,6 +38,11 @@
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1364117">경상남도 고성군 상리면 망림리 1002</a></p>
+      <img class="nw-100--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/1.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/2.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
+      <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
       <img class="nw-32--a" src="image//3.png" alt="null">
