--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -37,7 +37,7 @@
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1406591"></a></p>
+      <p><a href="https://www.my-auction.co.kr/view/1406591"></a>경상남도 창원시 마산합포구 진전면 여양리 산248-2</p>
       <img class="nw-100--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
