--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -58,6 +58,11 @@
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1401668">전라남도 순천시 주암면 운룡리 산311</a></p>
+      <img class="nw-100--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
       <img class="nw-32--a" src="image//3.png" alt="null">
