--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -37,7 +37,7 @@
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1406591"></a>경상남도 창원시 마산합포구 진전면 여양리 산248-2</p>
+      <p><a href="https://www.my-auction.co.kr/view/1406591">경상남도 창원시 마산합포구 진전면 여양리 산248-2</a></p>
       <img class="nw-100--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
@@ -63,6 +63,11 @@
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
+      <img class="nw-100--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/1.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/2.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
       <img class="nw-32--a" src="image//3.png" alt="null">
