--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -53,6 +53,11 @@
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1361173">전라남도 여수시 돌산읍 우두리 산41-1</a></p>
+      <img class="nw-100--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1401687">전라남도 보성군 벌교읍 대포리 244-1</a></p>
       <img class="nw-100--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
