--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -33,6 +33,11 @@
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
+      <img class="nw-100--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/1.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/2.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/3.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1271437">경상북도 청도군 청도읍 사촌리 34-1</a></p>
       <img class="nw-100--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
