--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -28,6 +28,11 @@
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399343">경기도 광주시 퇴촌면 관음리 82-32</a></p>
+      <img class="nw-100--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/1.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/2.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/3.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1407855">경기도 여주시 금사면 도곡리 530-31</a></p>
       <img class="nw-100--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
