--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -38,6 +38,11 @@
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
+      <img class="nw-100--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/1.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/2.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/3.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1405868">경상북도 영천시 고경면 상리리 산28</a></p>
       <img class="nw-100--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/3.png" alt="null">
