--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -88,6 +88,11 @@
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1401668">전라남도 순천시 주암면 운룡리 산311</a></p>
+      <img class="nw-100--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
       <img class="nw-100--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
