--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -128,6 +128,11 @@
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
+      <img class="nw-100--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/1.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/2.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/3.png" alt="null">
+      <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1399630">전북특별자치도 김제시 공덕면 제말리 190-1</a></p>
       <img class="nw-100--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/1.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/2.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/3.png" alt="null">
