--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -29,6 +29,7 @@
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399343">경기도 광주시 퇴촌면 관음리 82-32</a></p>
+      <p>진입 전 도로를 사유지라고 점령하고 있음. 진입 어려움</p>
       <img class="nw-100--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/1.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/2.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/3.png" alt="null">
@@ -156,33 +157,7 @@
       <img class="nw-24--a" src="image//5.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
       <!--
-      <img class="nw-100--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --0.png" alt="null">
-      <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --1.png" alt="null">
-      <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --2.png" alt="null">
-      <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --3.png" alt="null">
-      <img class="nw-24--a" src="image/충청남도 당진시 석문면 삼봉리 474-12 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1341224">충청남도 당진시 석문면 삼봉리 474-12</a> 낙찰기일: 5.14</p>
-      <img class="nw-100--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --0.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 완주군 화산면 종리 산57 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1333685">전북특별자치도 완주군 화산면 종리 산57</a> 5.12</p>
-      <img class="nw-100--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --0.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --1.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --2.png" alt="null">
-      <img class="nw-32--a" src="image/전북특별자치도 부안군 하서면 장신리 68-1 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1377739">전북특별자치도 부안군 하서면 장신리 68-1</a> 5.26</p>
-      <img class="nw-100--a" src="image/경상남도 의령군 용덕면 가미리 산46 --0.png" alt="null">
-      <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --1.png" alt="null">
-      <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --2.png" alt="null">
-      <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --3.png" alt="null">
-      <img class="nw-24--a" src="image/경상남도 의령군 용덕면 가미리 산46 --4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1335560">경상남도 의령군 용덕면 가미리 산46</a> 낙찰기일: 5.15</p>
-      <img class="nw-100--a" src="image/경상북도 성주군 수륜면 수륜리 853 --0.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --1.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
-      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a> 5.13</p>-->
+      -->
       <p></p>
       <img class="nw-100--a" src="image/.png" alt="null">
     </main>
