--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -77,7 +77,7 @@
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p></p>
+      <p>매물 상태가 뭔가 하기 애매함. (대지245평)</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
