--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -89,7 +89,7 @@
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
-      <p></p>
+      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대(임야8600평)</p>
       <img class="nw-100--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/3.png" alt="null">
