--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -35,7 +35,7 @@
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
-      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함. (대지281평)</p>
+      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함. (대 281평)</p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
@@ -77,7 +77,7 @@
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p>매물 상태가 뭔가 하기 애매함. (대지245평)</p>
+      <p>매물 상태가 뭔가 하기 애매함. (대 245평)</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
@@ -89,13 +89,7 @@
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
-      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대(임야8600평)</p>
-      <img class="nw-100--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/1.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/2.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/3.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1401668">전라남도 순천시 주암면 운룡리 산311</a></p>
-      <p></p>
+      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대(임 8600평)</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/3.png" alt="null">
@@ -170,18 +164,24 @@
       <img class="nw-24--a" src="image//5.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/-------"></a></p>
       <p></p>
-      <img class="nw-100--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/1.png" alt="null">
-      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/2.png" alt="null">
-      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/3.png" alt="null">
-      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1407304">경기도 연천군 왕징면 북삼리 289-2</a></p>
-      <p>철망 문 있고, 출입 금지 표지 있음. 진입 불가</p>
       <img class="nw-100--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/1.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/2.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/05-광주/경기도 광주시 퇴촌면 관음리 82-32/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399343">경기도 광주시 퇴촌면 관음리 82-32</a></p>
-      <p>진입 전 도로를 사유지라고 점령하고 있음. 진입 어려움</p>
+      <p>진입 전 도로를 사유지라고 점령하고 있음. 진입 어려움 (임 250평)</p>
+      <img class="nw-100--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/1.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/2.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/3.png" alt="null">
+      <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1407304">경기도 연천군 왕징면 북삼리 289-2</a></p>
+      <p>철망 문 있고, 출입 금지 표지 있음. 진입 불가 (낙찰됨)</p>
+      <img class="nw-100--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1401668">전라남도 순천시 주암면 운룡리 산311</a></p>
+      <p>진입로 없음. 진입 불가 (임 12000평)</p>
       -->
       <p></p>
       <img class="nw-100--a" src="image/.png" alt="null">
