--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -95,7 +95,7 @@
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1420528">전라남도 여수시 소라면 복산리 산123-1</a></p>
-      <p></p>
+      <p>매물은 좋음. (임 870평)</p>
       <img class="nw-100--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/3.png" alt="null">
