--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -35,7 +35,7 @@
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
-      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함. (대 281평)</p>
+      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 281평)</p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
@@ -77,7 +77,7 @@
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p>매물 상태가 뭔가 하기 애매함. (대 245평)</p>
+      <p>매물 상태가 뭔가 하기 애매함 (대 245평)</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
@@ -89,13 +89,13 @@
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
-      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대(임 8600평)</p>
+      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대 (임 8600평)</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1420528">전라남도 여수시 소라면 복산리 산123-1</a></p>
-      <p>매물은 좋음. (임 870평)</p>
+      <p>매물은 좋음 (임 870평)</p>
       <img class="nw-100--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/3.png" alt="null">
@@ -107,7 +107,7 @@
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1425679">전라남도 장흥군 용산면 접정리 391</a></p>
-      <p></p>
+      <p>매물은 좋지만 주거지역내 (대 400평중 건65평)</p>
       <img class="nw-100--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
