--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -96,12 +96,6 @@
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1420528">전라남도 여수시 소라면 복산리 산123-1</a></p>
       <p>매물은 좋음 (임 870평)</p>
-      <img class="nw-100--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/1.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/2.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/3.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1401687">전라남도 보성군 벌교읍 대포리 244-1</a></p>
-      <p></p>
       <img class="nw-100--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
@@ -113,7 +107,7 @@
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
-      <p></p>
+      <p>매물은 좋지만 진입로가 너무 좁음 (대 800평평)</p>
       <img class="nw-100--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/3.png" alt="null">
@@ -176,6 +170,12 @@
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1361173">전라남도 여수시 돌산읍 우두리 산41-1</a></p>
       <p>진입로 없음. 진입 불가 (임 1300평)</p>
+      <img class="nw-100--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1401687">전라남도 보성군 벌교읍 대포리 244-1</a></p>
+      <p>진입로 다 막음. 진입 불가 (임 1100평)</p>
       <img class="nw-100--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/1.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/2.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/3.png" alt="null">
