--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -107,13 +107,13 @@
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
-      <p>매물은 좋지만 진입로가 너무 좁음 (대 800평평)</p>
+      <p>매물은 좋지만 진입로가 너무 좁음 (대 800평)</p>
       <img class="nw-100--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1410596">전라남도 무안군 청계면 송현리 산21</a></p>
-      <p></p>
+      <p>매물은 좋지만 근처에 축사가 너무 많음 (임 800평)</p>
       <img class="nw-100--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/1.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/2.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/3.png" alt="null">
