--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -23,13 +23,13 @@
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1407855">경기도 여주시 금사면 도곡리 530-31</a></p>
-      <p></p>
+      <p>매물은 좋음. 도로보다 저지대 (임 200평)</p>
       <img class="nw-100--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1412459">강원특별자치도 평창군 미탄면 한탄리 442-3</a></p>
-      <p></p>
+      <p>매물은 좋음. 도로보다 저지대 (임 245평)</p>
       <img class="nw-100--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
@@ -89,7 +89,7 @@
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
-      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 상지대 이나 산 전체에서 저지대 (임 8600평)</p>
+      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 고지대 이나 산 전체에서 저지대 (임 8600평)</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/3.png" alt="null">
