--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -29,13 +29,13 @@
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1412459">강원특별자치도 평창군 미탄면 한탄리 442-3</a></p>
-      <p>매물은 좋음. 도로보다 저지대 (임 245평)</p>
+      <p>매물은 좋음. 도로보다 저지대 (임 240평)</p>
       <img class="nw-100--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
-      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 281평)</p>
+      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 280평)</p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
@@ -77,7 +77,7 @@
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p>매물 상태가 뭔가 하기 애매함 (대 245평)</p>
+      <p>매물 상태가 뭔가 하기 애매함 (대 240평)</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
@@ -119,13 +119,13 @@
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399630">전북특별자치도 김제시 공덕면 제말리 190-1</a></p>
-      <p></p>
+      <p>대체로 양호 하지만 진입로가 난해함 (대 250평)</p>
       <img class="nw-100--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/1.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/2.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
-      <p></p>
+      <p>매물은 좋음 (임 2100평)</p>
       <img class="nw-100--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/1.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/2.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/3.png" alt="null">
