--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -131,7 +131,7 @@
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/3.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1405821">충청남도 서산시 지곡면 대요리 680-7</a></p>
-      <p></p>
+      <p>매물은 좋음 (임 480평)</p>
       <img class="nw-100--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/1.png" alt="null">
       <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/2.png" alt="null">
       <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/3.png" alt="null">
