--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -132,12 +132,6 @@
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1405821">충청남도 서산시 지곡면 대요리 680-7</a></p>
       <p>매물은 좋음 (임 480평)</p>
-      <img class="nw-100--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/1.png" alt="null">
-      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/2.png" alt="null">
-      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/3.png" alt="null">
-      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1378650">충청북도 음성군 원남면 덕정리 423-3</a></p>
-      <p></p>
       <!--
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
@@ -176,6 +170,12 @@
       <img class="nw-32--a" src="image/05-전남/10-보성/전라남도 보성군 벌교읍 대포리 244-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1401687">전라남도 보성군 벌교읍 대포리 244-1</a></p>
       <p>진입로 다 막음. 진입 불가 (임 1100평)</p>
+      <img class="nw-100--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/1.png" alt="null">
+      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/2.png" alt="null">
+      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/3.png" alt="null">
+      <img class="nw-32--a" src="image/09-충북/20-음성/충청북도 음성군 원남면 덕정리 423-3/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1378650">충청북도 음성군 원남면 덕정리 423-3</a></p>
+      <p>감정평가와 전혀 다른 상태 (대 130평)</p>
       <img class="nw-100--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/1.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/2.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/01-연천/경기도 연천군 왕징면 북삼리 289-2/3.png" alt="null">
