--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -41,19 +41,13 @@
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1400351">경상북도 예천군 풍양면 오지리 235-3</a></p>
-      <p></p>
-      <img class="nw-100--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/1.png" alt="null">
-      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/2.png" alt="null">
-      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/3.png" alt="null">
-      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1405868">경상북도 영천시 고경면 상리리 산28</a></p>
-      <p></p>
+      <p>대체로 양호하나 진입로가 좁음 (임 270평)</p>
       <img class="nw-100--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1426679">경상북도 경주시 산내면 내일리 산448-3</a></p>
-      <p></p>
+      <p>매물은 좋음. 도로보다 고지대 (임 470평)</p>
       <img class="nw-100--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/3.png" alt="null">
@@ -158,6 +152,12 @@
       <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
       <p>진입로 없음. 진입 불가 (임 15000평)</p>
+      <img class="nw-100--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/1.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/2.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/3.png" alt="null">
+      <img class="nw-32--a" src="image/03-경북/20-영천/경상북도 영천시 고경면 상리리 산28/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1405868">경상북도 영천시 고경면 상리리 산28</a></p>
+      <p>진입로 없음. 진입 불가 (임 6000평)</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/3.png" alt="null">
