--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -53,13 +53,13 @@
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1271437">경상북도 청도군 청도읍 사촌리 34-1</a></p>
-      <p></p>
+      <p>매물은 양호하나 앞집에 큰 개가 있고 트러블이 있을 가능성 높음 (임 220평)</p>
       <img class="nw-100--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1406591">경상남도 창원시 마산합포구 진전면 여양리 산248-2</a></p>
-      <p></p>
+      <p>매물은 좋은데 접도구역이라 아무것도 못 할 가능성 있음 (임 240평)</p>
       <img class="nw-100--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
