--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -36,6 +36,12 @@
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
       <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 280평) == 5회차 5600</p>
+      <img class="nw-100--a" src="image/경상북도 성주군 수륜면 수륜리 853 --0.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --1.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
+      <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a></p>
+      <p></p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
@@ -113,13 +119,13 @@
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
-      <p>매물은 좋음 (임 2100평) == 3회차 1400</p>
+      <p>매물은 좋으나 제한이 있음. 공장설립제한지역, 보전관리지역, 농림지역 (임 2100평) == 3회차 1400</p>
       <img class="nw-100--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/1.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/2.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/3.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1405821">충청남도 서산시 지곡면 대요리 680-7</a></p>
-      <p>매물은 좋음 (임 480평) == 4회차 2800</p>
+      <p>[표적]매물은 좋음 (임 480평) == 4회차 2800</p>
       <!--
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
