--- a/ko/link/real-estate/Gyeonggi-do/Yeoju-si/dogok-ri-530-31/index.html
+++ b/ko/link/real-estate/Gyeonggi-do/Yeoju-si/dogok-ri-530-31/index.html
@@ -18,7 +18,11 @@
     <aside>
     </aside>
     <main>
-      <p>경기도 여주시 금사면 도곡리 530-31</p>
+      <h3>경기도 여주시 금사면 도곡리 530-31</h3>
+      <p>여주지원 경매3계 2024 타경 38986 [임야]</p>
+      <p>토지면적:	672.00 ㎡ (203.28평)</p>
+      <p>관련사건: 서울중앙지방법원 2022차전178692 지급명령</p>
+      <p></p>
       <h3>건폐율</h3>
       <p></p>
       <h3>용적률</h3>
