--- a/ko/link/real-estate/Gyeonggi-do/Yeoju-si/dogok-ri-530-31/index.html
+++ b/ko/link/real-estate/Gyeonggi-do/Yeoju-si/dogok-ri-530-31/index.html
@@ -18,6 +18,7 @@
     <aside>
     </aside>
     <main>
+      <img class="nw-100--a" src="../../../image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/5.png" alt="null">
       <h3>경기도 여주시 금사면 도곡리 530-31</h3>
       <p>여주지원 경매3계 2024 타경 38986 [임야]</p>
       <p>토지면적:	672.00 ㎡ (203.28평)</p>
