--- a/ko/link/real-estate/chungcheongnam-do/seosan-si/jigok-myeon-daeyo-ri-680-7/index.html
+++ b/ko/link/real-estate/chungcheongnam-do/seosan-si/jigok-myeon-daeyo-ri-680-7/index.html
@@ -18,11 +18,11 @@
     <aside>
     </aside>
     <main>
-      <img class="nw-100--a" src="../../../image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/5.png" alt="null">
-      <h3>경기도 여주시 금사면 도곡리 530-31</h3>
-      <p>여주지원 경매3계 2024 타경 38986 [임야]</p>
-      <p>토지면적:	672.00 ㎡ (203.28평)</p>
-      <p>관련사건: 서울중앙지방법원 2022차전178692 지급명령</p>
+      <img class="nw-100--a" src="../../../image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/5.png" alt="null">
+      <h3>충청남도 서산시 지곡면 대요리 680-7</h3>
+      <p>서산지원 경매6계 2024 타경 57789 (1) [임야]</p>
+      <p>토지면적: 1,605.00 ㎡ (485.51평)</p>
+      <p>중복/병합: 중복 2024타경60211</p>
       <p></p>
       <hr>
       <h3>건폐율</h3>
