--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -47,7 +47,7 @@
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --2.png" alt="null">
       <img class="nw-32--a" src="image/경상북도 성주군 수륜면 수륜리 853 --3.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1392236">경상북도 성주군 수륜면 수륜리 853</a></p>
-      <p></p>
+      <p>매물 자체는 양호함. (대 166평중 창고1평) ==6회차 900</p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
@@ -71,7 +71,7 @@
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1406591">경상남도 창원시 마산합포구 진전면 여양리 산248-2</a></p>
-      <p>매물은 좋은데 접도구역이라 아무것도 못 할 가능성 있음 (임 240평) == 4회차 1800</p>
+      <p>매물은 좋은데 접도구역이라 아무것도 못 할 가능성 있음 (임 240평) == 4회차 180</p>
       <img class="nw-100--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
